[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "steward-location-parser"
version = "1.0.0"
description = "Parse the location strings job boards actually emit: remote detection, ATS corruption stripping, alias normalization. Dependency-free."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["location", "geocoding", "job-postings", "parsing", "remote"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/searchsteward/location-parser"
"Built by" = "https://searchsteward.com"

[tool.setuptools]
py-modules = ["location_parser"]
